--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my home page</h1>
-    {{username}}
-    {{posts}}
-  
+    <h1>header</h1>
+    {{username.username}}
+    {{username.posts}}
+
+    
 </body>
 </html>
