--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -9,6 +9,16 @@
     <h1>this is my home page</h1>
     {{username}}
     {{posts}}
+    <br>
+    <br>
+    <hr>
+
+    <div>
+        <form action="/profile" method="post" enctype="multipart/form-data">
+  <input type="file" name="avatar" />
+  <input type="submit" name="Upload" />
+        </form>
+  </div>
   
 </body>
 </html>
